// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReviewReaction > should render ReviewReaction type 'D' like correctly when defaultPressed=false  1`] = `
<ForwardRef(Grid)
  alignItems="center"
  direction="row"
  spacing={0.5}
>
  <ForwardRef(IconButton)
    size="small"
  >
    <SelectedIcon />
  </ForwardRef(IconButton)>
  <ForwardRef(Typography)
    color="#C9CCE4"
    variant="h6"
  >
    42
  </ForwardRef(Typography)>
</ForwardRef(Grid)>
`;

exports[`ReviewReaction > should render ReviewReaction type 'D' like correctly when defaultPressed=true  1`] = `
<ForwardRef(Grid)
  alignItems="center"
  direction="row"
  spacing={0.5}
>
  <ForwardRef(IconButton)
    size="small"
  >
    <SelectedIcon />
  </ForwardRef(IconButton)>
  <ForwardRef(Typography)
    color="#F96666"
    variant="h6"
  >
    42
  </ForwardRef(Typography)>
</ForwardRef(Grid)>
`;

exports[`ReviewReaction > should render ReviewReaction type 'L' like correctly when defaultPressed=false  1`] = `
<ForwardRef(Grid)
  alignItems="center"
  direction="row"
  spacing={0.5}
>
  <ForwardRef(IconButton)
    size="small"
  >
    <SelectedIcon />
  </ForwardRef(IconButton)>
  <ForwardRef(Typography)
    color="#C9CCE4"
    variant="h6"
  >
    42
  </ForwardRef(Typography)>
</ForwardRef(Grid)>
`;

exports[`ReviewReaction > should render ReviewReaction type 'L' like correctly when defaultPressed=true  1`] = `
<ForwardRef(Grid)
  alignItems="center"
  direction="row"
  spacing={0.5}
>
  <ForwardRef(IconButton)
    size="small"
  >
    <SelectedIcon />
  </ForwardRef(IconButton)>
  <ForwardRef(Typography)
    color="#6CD62B"
    variant="h6"
  >
    42
  </ForwardRef(Typography)>
</ForwardRef(Grid)>
`;
